--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+0.1.2:
+  * Actual order independent choosing.
+  * Added test cases.
+  * Refactored code.
+
 0.1.1:
   * Include needed modules.
   * Smarter, order-independent auto-choosing.
