--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+0.1.2.1:
+  * Relax Cabal constraint.
+  * Remove halberd constraint. It made the last version unbuildable.
+
 0.1.2:
   * Actual order independent choosing.
   * Added test cases.
